--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -13,8 +13,8 @@
      "text": [
       "Requirement already up-to-date: sklearn in /opt/anaconda3/lib/python3.7/site-packages (0.0)\r\n",
       "Requirement already satisfied, skipping upgrade: scikit-learn in /opt/anaconda3/lib/python3.7/site-packages (from sklearn) (0.21.3)\r\n",
-      "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (0.13.2)\r\n",
       "Requirement already satisfied, skipping upgrade: numpy>=1.11.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.17.2)\r\n",
+      "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (0.13.2)\r\n",
       "Requirement already satisfied, skipping upgrade: scipy>=0.17.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.4.1)\r\n"
      ]
     }
@@ -800,9 +800,9 @@
       "[CV] C=1, gamma=0.001 ................................................\n",
       "[CV] ................................. C=1, gamma=0.001, total=   0.2s\n",
       "[CV] C=1, gamma=0.005 ................................................\n",
-      "[CV] ................................. C=1, gamma=0.005, total=   0.2s\n",
+      "[CV] ................................. C=1, gamma=0.005, total=   0.3s\n",
       "[CV] C=1, gamma=0.005 ................................................\n",
-      "[CV] ................................. C=1, gamma=0.005, total=   0.2s\n",
+      "[CV] ................................. C=1, gamma=0.005, total=   0.3s\n",
       "[CV] C=1, gamma=0.005 ................................................\n",
       "[CV] ................................. C=1, gamma=0.005, total=   0.2s\n",
       "[CV] C=5, gamma=0.0001 ...............................................\n",
@@ -814,19 +814,19 @@
       "[CV] C=5, gamma=0.0005 ...............................................\n",
       "[CV] ................................ C=5, gamma=0.0005, total=   0.3s\n",
       "[CV] C=5, gamma=0.0005 ...............................................\n",
-      "[CV] ................................ C=5, gamma=0.0005, total=   0.3s\n",
+      "[CV] ................................ C=5, gamma=0.0005, total=   0.2s\n",
       "[CV] C=5, gamma=0.0005 ...............................................\n",
       "[CV] ................................ C=5, gamma=0.0005, total=   0.2s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
       "[CV] ................................. C=5, gamma=0.001, total=   0.3s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
-      "[CV] ................................. C=5, gamma=0.001, total=   0.3s\n",
+      "[CV] ................................. C=5, gamma=0.001, total=   0.2s\n",
       "[CV] C=5, gamma=0.001 ................................................\n",
       "[CV] ................................. C=5, gamma=0.001, total=   0.2s\n",
       "[CV] C=5, gamma=0.005 ................................................\n",
       "[CV] ................................. C=5, gamma=0.005, total=   0.3s\n",
       "[CV] C=5, gamma=0.005 ................................................\n",
-      "[CV] ................................. C=5, gamma=0.005, total=   0.3s\n",
+      "[CV] ................................. C=5, gamma=0.005, total=   0.2s\n",
       "[CV] C=5, gamma=0.005 ................................................\n",
       "[CV] ................................. C=5, gamma=0.005, total=   0.2s\n",
       "[CV] C=10, gamma=0.0001 ..............................................\n",
@@ -834,13 +834,13 @@
       "[CV] C=10, gamma=0.0001 ..............................................\n",
       "[CV] ............................... C=10, gamma=0.0001, total=   0.3s\n",
       "[CV] C=10, gamma=0.0001 ..............................................\n",
-      "[CV] ............................... C=10, gamma=0.0001, total=   0.3s\n",
+      "[CV] ............................... C=10, gamma=0.0001, total=   0.2s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
       "[CV] ............................... C=10, gamma=0.0005, total=   0.3s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
-      "[CV] ............................... C=10, gamma=0.0005, total=   0.3s\n",
+      "[CV] ............................... C=10, gamma=0.0005, total=   0.2s\n",
       "[CV] C=10, gamma=0.0005 ..............................................\n",
-      "[CV] ............................... C=10, gamma=0.0005, total=   0.3s\n",
+      "[CV] ............................... C=10, gamma=0.0005, total=   0.2s\n",
       "[CV] C=10, gamma=0.001 ...............................................\n",
       "[CV] ................................ C=10, gamma=0.001, total=   0.3s\n",
       "[CV] C=10, gamma=0.001 ...............................................\n",
@@ -854,7 +854,7 @@
       "[CV] C=10, gamma=0.005 ...............................................\n",
       "[CV] ................................ C=10, gamma=0.005, total=   0.3s\n",
       "[CV] C=50, gamma=0.0001 ..............................................\n",
-      "[CV] ............................... C=50, gamma=0.0001, total=   0.4s\n",
+      "[CV] ............................... C=50, gamma=0.0001, total=   0.3s\n",
       "[CV] C=50, gamma=0.0001 ..............................................\n",
       "[CV] ............................... C=50, gamma=0.0001, total=   0.3s\n",
       "[CV] C=50, gamma=0.0001 ..............................................\n",
@@ -862,17 +862,17 @@
       "[CV] C=50, gamma=0.0005 ..............................................\n",
       "[CV] ............................... C=50, gamma=0.0005, total=   0.4s\n",
       "[CV] C=50, gamma=0.0005 ..............................................\n",
-      "[CV] ............................... C=50, gamma=0.0005, total=   0.3s\n",
+      "[CV] ............................... C=50, gamma=0.0005, total=   0.4s\n",
       "[CV] C=50, gamma=0.0005 ..............................................\n",
       "[CV] ............................... C=50, gamma=0.0005, total=   0.3s\n",
       "[CV] C=50, gamma=0.001 ...............................................\n",
-      "[CV] ................................ C=50, gamma=0.001, total=   0.4s\n",
+      "[CV] ................................ C=50, gamma=0.001, total=   0.3s\n",
       "[CV] C=50, gamma=0.001 ...............................................\n",
       "[CV] ................................ C=50, gamma=0.001, total=   0.3s\n",
       "[CV] C=50, gamma=0.001 ...............................................\n",
       "[CV] ................................ C=50, gamma=0.001, total=   0.3s\n",
       "[CV] C=50, gamma=0.005 ...............................................\n",
-      "[CV] ................................ C=50, gamma=0.005, total=   0.4s\n",
+      "[CV] ................................ C=50, gamma=0.005, total=   0.3s\n",
       "[CV] C=50, gamma=0.005 ...............................................\n",
       "[CV] ................................ C=50, gamma=0.005, total=   0.3s\n",
       "[CV] C=50, gamma=0.005 ...............................................\n",
@@ -883,7 +883,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  48 out of  48 | elapsed:   12.9s finished\n"
+      "[Parallel(n_jobs=1)]: Done  48 out of  48 | elapsed:   12.7s finished\n"
      ]
     },
     {
@@ -950,8 +950,9 @@
     }
    ],
    "source": [
-    "model_best_param = SVC(kernel='linear', C = grid.best_params_['C'], \n",
-    "            gamma = grid.best_params_['gamma'])\n",
+    "model_best_param = SVC(kernel='linear', \n",
+    "                       C = grid.best_params_['C'], \n",
+    "                       gamma = grid.best_params_['gamma'])\n",
     "\n",
     "model_best_param.fit(X_train_scaled, y_train_encoded)"
    ]
@@ -967,25 +968,27 @@
      "text": [
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     Candidate       0.71      0.48      0.57       411\n",
-      "     Confirmed       0.66      0.82      0.73       484\n",
+      "     Candidate       0.82      0.65      0.73       411\n",
+      "     Confirmed       0.75      0.86      0.80       484\n",
       "False Positive       0.98      1.00      0.99       853\n",
       "\n",
-      "      accuracy                           0.83      1748\n",
-      "     macro avg       0.78      0.77      0.76      1748\n",
-      "  weighted avg       0.83      0.83      0.82      1748\n",
+      "      accuracy                           0.88      1748\n",
+      "     macro avg       0.85      0.84      0.84      1748\n",
+      "  weighted avg       0.88      0.88      0.88      1748\n",
       "\n",
-      "Testing Data Score: 0.8260869565217391\n"
+      "Testing Data Score: 0.8775743707093822\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "predictions = model.predict(X_test_scaled)\n",
+    "predictions = model_best_param.predict(X_test_scaled)\n",
+    "\n",
     "print(classification_report(y_test_encoded, predictions,\n",
     "                            target_names=[ 'Candidate', 'Confirmed', 'False Positive']))\n",
-    "print(f\"Testing Data Score: {model.score(X_test_scaled, y_test_encoded)}\")"
+    "\n",
+    "print(f\"Testing Data Score: {model_best_param.score(X_test_scaled, y_test_encoded)}\")"
    ]
   },
   {
@@ -1060,7 +1063,9 @@
     "predictions_df=pd.DataFrame({\"Actual\": y_test_encoded, \"Prediction\": predictions, })\n",
     "\n",
     "results=predictions_df.apply(pd.Series.value_counts)\n",
+    "\n",
     "disposition = ['False Positive', 'Confirmed', 'Candidate',] \n",
+    "\n",
     "results['Disposition']=disposition\n",
     "results"
    ]
