--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -13,9 +13,9 @@
      "text": [
       "Requirement already up-to-date: sklearn in /opt/anaconda3/lib/python3.7/site-packages (0.0)\r\n",
       "Requirement already satisfied, skipping upgrade: scikit-learn in /opt/anaconda3/lib/python3.7/site-packages (from sklearn) (0.21.3)\r\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.11.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.17.2)\r\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=0.17.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.4.1)\r\n",
       "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (0.13.2)\r\n",
-      "Requirement already satisfied, skipping upgrade: scipy>=0.17.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.4.1)\r\n"
+      "Requirement already satisfied, skipping upgrade: numpy>=1.11.0 in /opt/anaconda3/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.17.2)\r\n"
      ]
     }
    ],
@@ -48,13 +48,6 @@
    "source": [
     "import pandas as pd\n",
     "from pprint import pprint"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Read the CSV and Perform Basic Data Cleaning"
    ]
   },
   {
@@ -284,13 +277,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Select your features (columns)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -308,15 +294,6 @@
     "                            \"koi_srad_err1\",\n",
     "                            \"koi_srad_err2\"],\n",
     "                            axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create a Train Test Split\n",
-    "\n",
-    "Use `koi_disposition` for the y values"
    ]
   },
   {
@@ -556,15 +533,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pre-processing\n",
-    "\n",
-    "Scale the data using the MinMaxScaler and perform some feature selection"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -684,14 +652,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train the Model\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -718,22 +678,13 @@
      "output_type": "stream",
      "text": [
       "Training Data Score: 1.0\n",
-      "Testing Data Score: 0.897025171624714\n"
+      "Testing Data Score: 0.9010297482837528\n"
      ]
     }
    ],
    "source": [
     "print(f\"Training Data Score: {model.score(X_train_scaled, y_train_encoded)}\")\n",
     "print(f\"Testing Data Score: {model.score(X_test_scaled, y_test_encoded)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hyperparameter Tuning\n",
-    "\n",
-    "Use `GridSearchCV` to tune the model's parameters"
    ]
   },
   {
@@ -778,9 +729,14 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = {'min_samples_leaf': [1, 5, 10],\n",
-    "              'min_samples_split': [2, 6, 12]}\n",
-    "grid = GridSearchCV(model, param_grid, verbose=3)"
+    "\n",
+    "param_grid = {'criterion': ['entropy'],\n",
+    "              'max_depth': [74, 75, 76], \n",
+    "              'min_weight_fraction_leaf': [0],\n",
+    "              'min_samples_split': [8]}\n",
+    "\n",
+    "\n",
+    "grid = GridSearchCV(model, param_grid, verbose=1)"
    ]
   },
   {
@@ -792,8 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
-      "[CV] min_samples_leaf=1, min_samples_split=2 .........................\n"
+      "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n"
      ]
     },
     {
@@ -802,99 +757,8 @@
      "text": [
       "/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
       "  warnings.warn(CV_WARNING, FutureWarning)\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV]  min_samples_leaf=1, min_samples_split=2, score=0.903, total=   1.8s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=2 .........................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    1.8s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV]  min_samples_leaf=1, min_samples_split=2, score=0.890, total=   2.0s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=2 .........................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    3.8s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV]  min_samples_leaf=1, min_samples_split=2, score=0.887, total=   1.8s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=6, score=0.902, total=   1.8s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=6, score=0.890, total=   2.0s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=6, score=0.886, total=   2.0s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=12, score=0.905, total=   1.8s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=12, score=0.894, total=   1.8s\n",
-      "[CV] min_samples_leaf=1, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=1, min_samples_split=12, score=0.886, total=   1.8s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=2 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=2, score=0.903, total=   1.8s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=2 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=2, score=0.888, total=   1.7s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=2 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=2, score=0.881, total=   1.7s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=6, score=0.900, total=   1.7s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=6, score=0.892, total=   1.7s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=6 .........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=6, score=0.880, total=   1.7s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=12, score=0.902, total=   1.8s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=12, score=0.888, total=   1.8s\n",
-      "[CV] min_samples_leaf=5, min_samples_split=12 ........................\n",
-      "[CV]  min_samples_leaf=5, min_samples_split=12, score=0.881, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=2 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=2, score=0.895, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=2 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=2, score=0.887, total=   1.6s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=2 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=2, score=0.875, total=   1.6s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=6 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=6, score=0.893, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=6 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=6, score=0.886, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=6 ........................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=6, score=0.876, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=12 .......................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=12, score=0.895, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=12 .......................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=12, score=0.889, total=   1.7s\n",
-      "[CV] min_samples_leaf=10, min_samples_split=12 .......................\n",
-      "[CV]  min_samples_leaf=10, min_samples_split=12, score=0.875, total=   1.6s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  27 out of  27 | elapsed:   47.4s finished\n"
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   9 out of   9 | elapsed:   22.6s finished\n"
      ]
     },
     {
@@ -915,10 +779,11 @@
        "                                              random_state=None, verbose=0,\n",
        "                                              warm_start=False),\n",
        "             iid='warn', n_jobs=None,\n",
-       "             param_grid={'min_samples_leaf': [1, 5, 10],\n",
-       "                         'min_samples_split': [2, 6, 12]},\n",
+       "             param_grid={'criterion': ['entropy'], 'max_depth': [74, 75, 76],\n",
+       "                         'min_samples_split': [8],\n",
+       "                         'min_weight_fraction_leaf': [0]},\n",
        "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-       "             scoring=None, verbose=3)"
+       "             scoring=None, verbose=1)"
       ]
      },
      "execution_count": 16,
@@ -939,8 +804,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'min_samples_leaf': 1, 'min_samples_split': 12}\n",
-      "0.8949074957085638\n"
+      "{'criterion': 'entropy', 'max_depth': 74, 'min_samples_split': 8, 'min_weight_fraction_leaf': 0}\n",
+      "0.897196261682243\n"
      ]
     }
    ],
@@ -967,13 +832,13 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "                       max_depth=74, max_features='auto', max_leaf_nodes=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=12,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
-       "                       n_jobs=None, oob_score=False, random_state=None,\n",
-       "                       verbose=0, warm_start=False)"
+       "                       min_samples_leaf=1, min_samples_split=8,\n",
+       "                       min_weight_fraction_leaf=0, n_estimators=10, n_jobs=None,\n",
+       "                       oob_score=False, random_state=None, verbose=0,\n",
+       "                       warm_start=False)"
       ]
      },
      "execution_count": 18,
@@ -982,7 +847,9 @@
     }
    ],
    "source": [
-    "model_best_param = RandomForestClassifier(min_samples_leaf = grid.best_params_['min_samples_leaf'], \n",
+    "model_best_param = RandomForestClassifier(criterion = grid.best_params_['criterion'],\n",
+    "                                          max_depth = grid.best_params_['max_depth'],\n",
+    "                                          min_weight_fraction_leaf = grid.best_params_['min_weight_fraction_leaf'],\n",
     "                                          min_samples_split = grid.best_params_['min_samples_split'])\n",
     "\n",
     "model_best_param.fit(X_train_scaled, \n",
@@ -1000,15 +867,15 @@
      "text": [
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     Candidate       0.79      0.72      0.75       411\n",
-      "     Confirmed       0.82      0.82      0.82       484\n",
-      "False Positive       0.95      0.99      0.97       853\n",
+      "     Candidate       0.80      0.77      0.78       411\n",
+      "     Confirmed       0.83      0.83      0.83       484\n",
+      "False Positive       0.97      0.99      0.98       853\n",
       "\n",
-      "      accuracy                           0.88      1748\n",
-      "     macro avg       0.85      0.84      0.85      1748\n",
-      "  weighted avg       0.88      0.88      0.88      1748\n",
+      "      accuracy                           0.89      1748\n",
+      "     macro avg       0.87      0.86      0.86      1748\n",
+      "  weighted avg       0.89      0.89      0.89      1748\n",
       "\n",
-      "Testing Data Score: 0.879862700228833\n"
+      "Testing Data Score: 0.8918764302059496\n"
      ]
     }
    ],
@@ -1058,19 +925,19 @@
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>853</td>\n",
-       "      <td>891</td>\n",
+       "      <td>870</td>\n",
        "      <td>False Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>484</td>\n",
-       "      <td>481</td>\n",
+       "      <td>483</td>\n",
        "      <td>Confirmed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>411</td>\n",
-       "      <td>376</td>\n",
+       "      <td>395</td>\n",
        "      <td>Candidate</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1079,9 +946,9 @@
       ],
       "text/plain": [
        "   Actual  Prediction     Disposition\n",
-       "2     853         891  False Positive\n",
-       "1     484         481       Confirmed\n",
-       "0     411         376       Candidate"
+       "2     853         870  False Positive\n",
+       "1     484         483       Confirmed\n",
+       "0     411         395       Candidate"
       ]
      },
      "execution_count": 20,
@@ -1108,36 +975,36 @@
     {
      "data": {
       "text/plain": [
-       "[(0.11364079395402683, 'koi_fpflag_co'),\n",
-       " (0.1121385638319553, 'koi_fpflag_nt'),\n",
-       " (0.07156762791581922, 'koi_model_snr'),\n",
-       " (0.07030035028695612, 'koi_fpflag_ss'),\n",
-       " (0.05174008661551222, 'koi_prad'),\n",
-       " (0.05022569516663451, 'koi_duration_err2'),\n",
-       " (0.047983420664048114, 'koi_duration_err1'),\n",
-       " (0.04269151423280085, 'koi_fpflag_ec'),\n",
-       " (0.041764535218323656, 'koi_prad_err1'),\n",
-       " (0.03808798633029836, 'koi_prad_err2'),\n",
-       " (0.031033667187617162, 'koi_period'),\n",
-       " (0.027620855089365702, 'koi_depth'),\n",
-       " (0.026174138265106114, 'koi_insol_err1'),\n",
-       " (0.024966733966525018, 'koi_duration'),\n",
-       " (0.023332461652274827, 'koi_impact'),\n",
-       " (0.021855083678497755, 'koi_teq'),\n",
-       " (0.019667036582571545, 'koi_depth_err2'),\n",
-       " (0.018315735876433824, 'koi_time0bk'),\n",
-       " (0.017840621358309085, 'koi_insol'),\n",
-       " (0.017289112282715745, 'koi_depth_err1'),\n",
-       " (0.01626809133505029, 'koi_insol_err2'),\n",
-       " (0.015345034379904414, 'koi_steff'),\n",
-       " (0.015152193175151783, 'ra'),\n",
-       " (0.014262467421620321, 'dec'),\n",
-       " (0.014035899550041302, 'koi_impact_err1'),\n",
-       " (0.013648813598847698, 'koi_impact_err2'),\n",
-       " (0.013553390520021644, 'koi_kepmag'),\n",
-       " (0.012665753465429735, 'koi_srad'),\n",
-       " (0.01237295656139855, 'koi_slogg'),\n",
-       " (0.004459379836742233, 'koi_tce_plnt_num')]"
+       "[(0.11515755895851527, 'koi_fpflag_co'),\n",
+       " (0.10627908641388274, 'koi_fpflag_nt'),\n",
+       " (0.07374078346286402, 'koi_model_snr'),\n",
+       " (0.06799525424478971, 'koi_fpflag_ss'),\n",
+       " (0.053392090614290795, 'koi_prad'),\n",
+       " (0.049306762305598835, 'koi_duration_err2'),\n",
+       " (0.04823644042691509, 'koi_duration_err1'),\n",
+       " (0.0425846223844516, 'koi_prad_err1'),\n",
+       " (0.04031406111679286, 'koi_fpflag_ec'),\n",
+       " (0.036053220188236465, 'koi_prad_err2'),\n",
+       " (0.030937610678555334, 'koi_period'),\n",
+       " (0.02799429958667517, 'koi_depth'),\n",
+       " (0.025621415426610828, 'koi_insol_err1'),\n",
+       " (0.025293183431087416, 'koi_duration'),\n",
+       " (0.023644286800804045, 'koi_impact'),\n",
+       " (0.022850422557436866, 'koi_teq'),\n",
+       " (0.020735998327374612, 'koi_depth_err2'),\n",
+       " (0.018888874729719018, 'koi_time0bk'),\n",
+       " (0.01834567565547471, 'koi_insol'),\n",
+       " (0.017850859920516327, 'koi_depth_err1'),\n",
+       " (0.01736913581694522, 'koi_insol_err2'),\n",
+       " (0.015404612644791196, 'ra'),\n",
+       " (0.014784979508300536, 'dec'),\n",
+       " (0.014603685519750265, 'koi_kepmag'),\n",
+       " (0.014538846165688098, 'koi_steff'),\n",
+       " (0.013840460325283802, 'koi_impact_err1'),\n",
+       " (0.013588763359352768, 'koi_impact_err2'),\n",
+       " (0.01300636798072867, 'koi_srad'),\n",
+       " (0.012945994219001193, 'koi_slogg'),\n",
+       " (0.004694647229566392, 'koi_tce_plnt_num')]"
       ]
      },
      "execution_count": 21,
@@ -1148,13 +1015,6 @@
    "source": [
     "features = X.columns\n",
     "sorted(zip(model.feature_importances_, features), reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save the Model"
    ]
   },
   {
